--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -1,36 +1,38 @@
 <ion-view view-title="Review">
-	<ion-header-bar align-title="left" class="bar-positive">
-		<div class="bar bar-header bar-light head_bar">
-        	 <div class="back_arrrow">
-        		<span class="sp2"><a ui-sref="login"><i class="ion-chevron-left"></i></a></span>
-               	<h2>Review a dish</h2>
-        	 </div>
-		</div>
-	</ion-header-bar>
-	<ion-content>
-		<div class="full_back suggest">
-        	<div class="dish-image">
-            	<img src="/dish-view.png" alt="" />
-            </div>	
-            <div class="center-btn">
-            	<div class="btn-wrap">
-                </div>
-            </div>
-   		</div>
-	</ion-content>
+  <ion-header-bar align-title="left" class="bar-positive">
+    <div class="bar bar-header bar-light head_bar">
+      <div class="back_arrrow">
+        <span class="sp2"><a ui-sref="login"><img src="./arrrow_left.png" /></a></span>  
+        <h2>Review a dish</h2>
+      </div>
+    </div>
+  </ion-header-bar>
+  <ion-content>
+    <div class="full_back suggest">
+      <div class="dish-image">
+        <img src="/dish-view.png" alt="" />
+      </div>
+      <div class="btn-row">
+        <div class="center-btn">
+          <div class="btn-wrap">
+          </div>
+        </div>
+      </div>
+      </div>
+  </ion-content>
     <div class="bar-assertive suggest_foot">
       <div class="tabs tabs-icon-top dish-view">
           <a class="tab-item">
-            <img src="/gallery.png" alt="" class="inactive" />
-            <img src="/gallery-hover.png"  class="active" alt="" style="display:none" />
+            <img src="/gallery.png" alt="" class="inactive">
+            <img src="/gallery-hover.png"  class="active" alt="" style="display:none">
           </a>
           <a class="tab-item">
-             <img src="/cam.png" alt=""  class="active" style="display:none" />
-            <img src="/cam-hover.png" alt="" class="inactive" />
+             <img src="/cam.png" alt=""  class="active" style="display:none">
+            <img src="/cam-hover.png" alt="" class="inactive">
           </a>
           <a class="tab-item">
-            <img src="/video.png" alt="" class="inactive" />
-            <img src="/video-hover.png" alt="" style="display:none"  class="active" />
+            <img src="/video.png" alt="" class="inactive">
+            <img src="/video-hover.png" alt="" style="display:none"  class="active">
           </a>
         </div>
     </div>
