--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar">
       <div class="back_arrrow">
-        <span class="sp2"><a ui-sref="welcome"><i class="ion-chevron-left"></i></a></span>
+        <span class="sp2"><a ui-sref="welcome"><img src="./arrrow_left.png" /></a></span>
       </div>
     </div>
   </ion-header-bar>
@@ -12,17 +12,26 @@
       <div class="logo">
         <img src="./logo1.png" alt=""/>
       </div>
-      <form name="loginForm" validation-schema schema="Register" ng-submit="login.userLogin(loginForm, data)">
+
+      <div class="row" ng-if="login.loginErr">
+        <div class="col">
+          <div class="fill-content">
+            <p>{{login.loginErr}}</p>
+          </div>
+        </div>
+      </div>
+
+      <form name="loginForm" validation-schema schema="Register" ng-submit="login.userLogin(loginForm)">
         <label class="item-input item-floating-label sign_lbl">
           <span class="icon-wrap">
             <span class="icon-top"><img src="./mail.png" alt="" /></span>
-            <input name="email" ng-model="data.email" type="text" placeholder="EMAIL">
+            <input name="email" ng-model="login.data.email" type="text" placeholder="EMAIL">
           </span>
         </label>
         <label class="item-input item-floating-label sign_lbl">
           <span class="icon-wrap">
             <span class="icon-top key"><img src="./key.png" alt="" /></span>
-            <input name="password" ng-model="data.password" type="password" placeholder="PASSWORD" required-error-message="This field is required!" validator="required">
+            <input name="password" ng-model="login.data.password" type="password" placeholder="PASSWORD" required-error-message="This field is required!" validator="required">
           </span>
         </label>
         <h2 class="forgt_pss"><a href="javascript:void(0);">FORGOT PASSWORD?</a></h2>
