--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -1,5 +1,221 @@
-<ion-view title="Feed">
-  <ion-content>
-    <!-- content display here -->
-  </ion-content>
+<ion-view view-title="Feed">
+	<ion-header-bar align-title="left" class="bar-positive">
+		<div class="bar bar-header bar-light head_bar">
+        	<div class="back_arrrow">
+            	<h2>Feed</h2>
+        	</div>
+		</div>
+	</ion-header-bar>
+	<ion-content>
+		<div class="full_back suggest feed">
+			<div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+        	<div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+            <div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+            <div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+            <div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+            <div class="row">
+            	<div class="col div1">
+                	<div class="row">
+                    	<div class="col col-33">
+                        	<div class="side-image-wrap">
+                            	<img src="/d1.png" alt=""/>
+                        	</div>
+                    	</div>
+                    	<div class="col col-67">
+                        	<div class="user-rate">
+                                <span>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                                    <i class="icon ion-ios-star-outline"></i>
+                               </span>
+                               <span class="pull-right user-name">
+                                    <span>Z. Ibrahimović</span>
+                                    <span class="user-img"><img src="/user1.png" alt=""/></span>
+                               </span>
+                        	</div>
+                            <p class="dish-name">Tasty chicken tacos, KFC Restaurant</p>
+                            <p class="resturant-name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu.</p>
+                            <p class="post-date">Posted: 10/10/2016</p>
+                    	</div>
+                    </div>
+                </div>
+			</div>
+   		</div>
+	</ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive suggest_foot">
+      <div class="tabs tabs-icon-top">
+          <div class="tab-item">
+          	<a href="/suggestion">
+                <img src="/tab1.png" alt="" class="inactive">
+                <img src="/tab1-hover.png" alt="" class="active" style="display:none"/>
+            </a>
+          </div>
+          <div class="tab-item">
+              <a href="/search" id="icon-wrap">
+                <img src="/tab2.png" alt="" class="inactive" style="display:none"/>
+                <img src="/tab2-hover.png" alt="" class="active">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/review" class="active" id="icon-wrap">
+                <img src="/tab3.png" alt="" class="inactive"/>
+                <img src="/tab3-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/feed" id="icon-wrap">
+                <img src="/tab4.png" alt="" class="inactive" />
+                <img src="/tab4-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a href="/profile" id="icon-wrap">
+                <img src="/tab5.png" alt="" class="inactive" />
+                <img src="/tab5-hover.png" alt=""  class="active" style="display:none">
+              </a>
+          </div>
+        </div>
+    </ion-footer-bar>
 </ion-view>
