--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,18 +1,178 @@
-<ion-view title="Profile">
-  <ion-content>
+<!-- <ion-view title="Profile">
+  <ion-content> -->
     <!-- content display here -->
-    <a ng-click="profile.openGallery();">Gallery</a>
+    <!-- <a ng-click="profile.openGallery();">Gallery</a>
     <br><br>
     <a ng-click="profile.clickPicture();">Click Picture</a>
     <br><br>
     <a ng-click="profile.clickPhoto();">clickPhoto</a>
     <br><br>
-    <a ng-click="profile.switchCamera();">switchCamera</a>
+    <a ng-click="profile.switchCamera();">switchCamera</a> -->
     <!-- <div ng-if="profile.image">
     	<img src="{{profile.image}}"/>
   	</div>
   	<img src="/img2.jpg"/> -->
-    <p><img id="previewPicture" width="200"/></p>
+    <!-- <p><img id="previewPicture" width="200"/></p>
     <p><img id="originalPicture" width="200"/></p>
   </ion-content>
+</ion-view> -->
+
+<ion-view view-title="signIn">
+  <ion-header-bar align-title="left" class="bar-positive">
+    <div class="bar bar-header bar-light head_bar">
+           <div class="back_arrrow">
+            <!-- <span class="sp2"><a ui-sref="login"><i class="ion-chevron-left"></i></a></span> -->  
+            <h2>Z. Ibrahimović</h2>
+           </div>
+    </div>
+  </ion-header-bar>
+  <ion-content>
+      <div class="user-profile">
+          <div class="row">
+              <div class="user-image">
+                  <img src="/user-image.png" alt="" />
+                </div>
+                <div class="user-detail user-review">
+                  <h3>100</h3>
+                    <p>Reviews</p>
+                </div>
+                <div class="user-detail user-followes">
+                  <h3>50</h3>
+                    <p>Followers</p>
+                </div>
+                <div class="user-detail user-following">
+                  <h3>43</h3>
+                    <p>Following</p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col user-del">
+                  <div class="user-name">
+                      <h5>Zaltan Ibrahimović<a href="javascript:void(0)" class="setting-icon"><img src="/setting.png" alt=""/></a></h5>
+                        
+                    </div>
+                    <p>zaltanIbrahimović@gmail.com</p>
+                    <p>10001</p>
+                </div>
+            </div>
+        </div>
+    <div class="full_back suggest">
+          <div class="row">
+              <div class="col">
+                  <h4 class="your-post">Your Post</h4>
+                </div>
+            </div>
+      <div class="row">
+              <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+              </div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                        
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                  <div class="div1">
+                        <img src="/d1.png"/>
+                        
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                  </div>
+                </div>
+      </div>
+          <div class="row">
+              <div class="col col-33">
+                  <div class="div1">
+                        <img src="/d1.png"/>
+                        
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                  </div>
+                </div>
+                <div class="col col-33">
+                  <div class="div1">
+                        <img src="/d3.png"/>
+                        
+                        <p class="dish-name">Italian pizza salami</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                  </div>
+                </div>
+                <div class="col col-33">
+                  <div class="div1">
+                        <img src="/d1.png"/>
+                        
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                  </div>
+                </div>
+         </div>
+          <div class="row">
+              <div class="col col-33">
+                <div class="div1">
+                        <img src="/d1.png"/>
+                       
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                </div>
+              </div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                       
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+      </div>
+      </div>
+  </ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive suggest_foot">
+      <div class="tabs tabs-icon-top">
+          <div class="tab-item">
+            <a href="/suggestion">
+                <img src="/tab1.png" alt="" class="inactive">
+                <img src="/tab1-hover.png" alt="" class="active" style="display:none"/>
+            </a>
+          </div>
+          <div class="tab-item">
+              <a href="/search" id="icon-wrap">
+                <img src="/tab2.png" alt="" class="inactive"/>
+                <img src="/tab2-hover.png" alt=""  class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/review" class="active" id="icon-wrap">
+                <img src="/tab3.png" alt="" class="inactive"/>
+                <img src="/tab3-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/feed" id="icon-wrap">
+                <img src="/tab4.png" alt="" class="inactive" />
+                <img src="/tab4-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a href="/profile" id="icon-wrap">
+                <img src="/tab5.png" alt="" class="inactive"  style="display:none"/>
+                <img src="/tab5-fill.png" alt=""  class="active">
+              </a>
+          </div>
+        </div>
+    </ion-footer-bar>
 </ion-view>
