--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar">
       <div class="back_arrrow">
-        <span class="sp2"><a ui-sref="login"><img src="./arrrow_left.png" /></a></span>  
+        <span class="sp2"><a href="window.history.back();"><img src="./arrrow_left.png" /></a></span>  
         <h2>Review a dish</h2>
       </div>
     </div>
