--- a/client/templates/search.html
+++ b/client/templates/search.html
@@ -1,5 +1,247 @@
-<ion-view title="Search">
-  <ion-content>
-    <!-- content display here -->
-  </ion-content>
+<ion-view view-title="Search">
+	<ion-header-bar align-title="left" class="bar-positive">
+		<div class="bar bar-header bar-light head_bar">
+        	<div class="back_arrrow">
+        		<!-- <span class="sp2"><a ui-sref="login"><img src="./arrrow_left.png" /></a></span> -->	
+            <h2>Search for a dish</h2>
+        	</div>
+		</div>
+	</ion-header-bar>
+    
+	<ion-content>
+    	<div class="search-bar">
+        	<div class="list">
+              <label class="item item-input no-padding search-bg">
+              	<div class="row">
+                	<div class="col col-67 search-input">
+                    	<img src="/search-icon.png" alt="" class="search-icon" />
+                    	<input type="text" placeholder="Search...">
+                    </div>
+                    <div class="col col-33">
+                    	<div class="select-style">
+                            <select class="search-select search-bg">
+                              <option selected>Filter</option>
+                              <option>Green</option>
+                              <option>Red</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+              </label>
+            </div>
+        </div>
+		<div class="full_back suggest">
+			<div class="row">
+          		<div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+          		</div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+                </div>
+			</div>
+        	<div class="row">
+            	<div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Italian pizza salami</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+         </div>
+        	<div class="row">
+          		<div class="col col-33">
+          			<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+            		</div>
+          		</div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+			</div>
+   		</div>
+	</ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive suggest_foot">
+      	<div class="tabs tabs-icon-top">
+          <div class="tab-item">
+          	<a href="/suggestion">
+                <img src="/tab1.png" alt="" class="inactive">
+                <img src="/tab1-hover.png" alt="" class="active" style="display:none"/>
+            </a>
+          </div>
+          <div class="tab-item">
+              <a href="/search" id="icon-wrap">
+                <img src="/tab2.png" alt="" class="inactive" style="display:none"/>
+                <img src="/tab2-hover.png" alt="" class="active">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/review" class="active" id="icon-wrap">
+                <img src="/tab3.png" alt="" class="inactive"/>
+                <img src="/tab3-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a  href="/feed" id="icon-wrap">
+                <img src="/tab4.png" alt="" class="inactive" />
+                <img src="/tab4-hover.png" alt="" class="active" style="display:none">
+              </a>
+          </div>
+          <div class="tab-item">
+              <a href="/profile" id="icon-wrap">
+                <img src="/tab5.png" alt="" class="inactive" />
+                <img src="/tab5-hover.png" alt=""  class="active" style="display:none">
+              </a>
+          </div>
+        </div>
+    </ion-footer-bar>
 </ion-view>
