--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -197,25 +197,25 @@
           </a>
         </div>
         <div class="tab-item">
-            <a href="#" id="icon-wrap">
+            <a href="/search" id="icon-wrap">
               <img src="/tab2.png" alt="" class="inactive"/>
               <img src="/tab2-hover.png" alt=""  class="active" style="display:none">
             </a>
         </div>
         <div class="tab-item">
-            <a  href="review" class="active" id="icon-wrap">
+            <a  href="/review" class="active" id="icon-wrap">
               <img src="/tab3.png" alt="" class="inactive"/>
               <img src="/tab3-hover.png" alt="" class="active" style="display:none">
             </a>
         </div>
         <div class="tab-item">
-            <a  href="#" id="icon-wrap">
+            <a  href="/feed" id="icon-wrap">
               <img src="/tab4.png" alt="" class="inactive" />
               <img src="/tab4-hover.png" alt="" class="active" style="display:none">
             </a>
         </div>
         <div class="tab-item">
-            <a href="#" id="icon-wrap">
+            <a href="/profile" id="icon-wrap">
               <img src="/tab5.png" alt="" class="inactive" />
               <img src="/tab5-hover.png" alt=""  class="active" style="display:none">
             </a>
